--- a/pools.html
+++ b/pools.html
@@ -200,6 +200,63 @@
           bottom: calc(-0.5 * var(--node) - var(--gap));
           left: calc(-0.5 * var(--node) - var(--gap));
       }
+        /*节点动画在这*/
+      .node::after{
+          content: attr(data-label);
+          positino: absolute;
+          top: 50%;
+          left: calc(100% +12px);
+          transform: translateY(-50%);
+          padding: 6px 12px;
+          border-radius: 999px;
+          background: var(--c,#fff);
+          color: #fff;
+          font-weight: 700;
+          font-size: 14px;
+          white-space: nowrap;
+          box-shadow: 0 8px 22px rgba(0,0,0,.25);
+          opacity: 0;
+          pointer-events: none;
+          transition: opacity .15s ease, transform .15s ease;
+          z-index: 2;
+      }
+      .node:hover::after,
+      .node:focus-visible::after{
+          opacity: 1;
+          transform: translateY(-50%) translateX(4px);
+      }
+    /*social*/
+      .node-social::after{
+          left: auto; right: calc(100% + 12px);
+          transform: translateY(-50%);
+      }
+      .node-social:hover::after,
+      .node-social:focus-visible::after{
+          transform: translateY(-50%) translateX(-4px);
+      }
+
+      .node-growth::after{
+          top: auto; bottom: 50%;
+          leftL auto; right: calc(100% + 12px);
+          transform: translateY(50%);
+          color: #332400
+      }
+
+      .node-growth:hover::after,
+      .node-growth:focus-visible::after{
+          transform: translateY(50%) translateX(-4px);
+      }
+
+      .node-study::after{
+          top: auto; bottom: 50%;
+          left: calc(100% + 12px);
+          transform: translateY(50%);
+      }
+      .node-study:hover::after,
+      .node-study:focus-visible::after{
+          transform: translateY(50%) translateX(4px);
+      }
+        
     </style>
 </head>
 <body>
