--- a/pools.html
+++ b/pools.html
@@ -203,7 +203,7 @@
         /*节点动画在这*/
       .node::after{
           content: attr(data-label);
-          positino: absolute;
+          position: absolute;
           top: 50%;
           left: calc(100% +12px);
           transform: translateY(-50%);
@@ -237,7 +237,7 @@
 
       .node-growth::after{
           top: auto; bottom: 50%;
-          leftL auto; right: calc(100% + 12px);
+          left auto; right: calc(100% + 12px);
           transform: translateY(50%);
           color: #332400
       }
