--- a/pools.html
+++ b/pools.html
@@ -225,7 +225,8 @@
           opacity: 1;
           transform: translateY(-50%) translateX(4px);
       }
-    /*social*/
+      .node-health::after{
+      }
       .node-social::after{
           left: auto; right: calc(100% + 12px);
           transform: translateY(-50%);
@@ -237,9 +238,8 @@
 
       .node-growth::after{
           top: auto; bottom: 50%;
-          left auto; right: calc(100% + 12px);
+          left: auto; right: calc(100% + 12px);
           transform: translateY(50%);
-          color: #332400
       }
 
       .node-growth:hover::after,
