--- a/pools.html
+++ b/pools.html
@@ -249,13 +249,13 @@
           transform: translateY(50%) translateX(-4px);
       }
 
-      .node-social::after{
+      .node-study::after{
           top: auto; bottom: 50%;
           left: calc(100% + 12px);
           transform: translateY(50%);
       }
-      .node-social:hover::after,
-      .node-social:focus-visible::after{
+      .node-study:hover::after,
+      .node-study:focus-visible::after{
           transform: translateY(50%) translateX(4px);
       }
         
