--- a/pools.html
+++ b/pools.html
@@ -281,11 +281,11 @@
                     <img src="social.png" alt="Social" class="icon-img">
                 </button>
 
-                <button class="node node-growth" style="--c:#ffd166" data-label="Growth" aria-label="Growth">
+                <button class="node node-growth" style="--c:#7b7bff" data-label="Growth" aria-label="Growth">
                     <img src="growth.png" alt="Growth" class="icon-img">
                 </button>
 
-                <button class="node node-study" style="--c:#7b7bff" data-label="Study" aria-label="Study">
+                <button class="node node-study" style="--c:#ffd166" data-label="Study" aria-label="Study">
                     <img src="study.png" alt="Study" class="icon-img">
                 </button>
             </div>
